@@ -2,9 +2,6 @@ package org.fungover.haze;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-
 import java.util.Collections;
 import java.util.List;
 
@@ -22,65 +19,66 @@ class HazeDatabaseTest {
 
     @Test
     void callingDeleteReturnsNumberOfSuccessfullyRemovedKeys() {
-        testDatabase.setNX("1", "test");
-        testDatabase.setNX("2", "test");
-        testDatabase.setNX("22", "thisShouldNotBeRemoved");
-        assertThat(testDatabase.delete(Arrays.asList("1", "2", "3", "4"))).isEqualTo(":2\r\n");
+        testDatabase.setNX(List.of("SETNX", "1", "test"));
+        testDatabase.setNX(List.of("SETNX", "2", "test"));
+        testDatabase.setNX(List.of("SETNX", "22", "thisShouldNotBeRemoved"));
+        assertThat(testDatabase.delete(List.of("1", "2", "3", "4"))).isEqualTo(":2\r\n");
     }
 
     @Test
     void callingDeleteRemovesTheSpecifiedKey() {
-        testDatabase.setNX("1", "thisWillBeRemoved");
+        testDatabase.setNX(List.of("SETNX", "1", "thisWillBeRemoved"));
         testDatabase.delete(Collections.singletonList("1"));
         assertThat(testDatabase.get("1")).isEqualTo("$-1\r\n");
     }
 
     @Test
     void callingGetReturnsTheCorrectValueIfItExists() {
-        testDatabase.setNX("someKey", "someValue");
+        testDatabase.setNX(List.of("SETNX", "someKey", "someValue"));
         assertThat(testDatabase.get("someKey")).isEqualTo("$9\r\nsomeValue\r\n");
     }
 
     @Test
     void testSetNxReturnZeroWhenExistingKeyAreUsedWithDifferentValue() {
-        testDatabase.setNX("1", "Hej");
-        assertThat(testDatabase.setNX("1", "Då")).isEqualTo(":0\r\n");
+        testDatabase.setNX(List.of("", "1", "Hej"));
+        assertThat(testDatabase.setNX(List.of("", "1", "Då"))).isEqualTo(":0\r\n");
     }
 
-	@Test
-	void testSetNxReturnOneWhenKeyDontExist() {
-		assertThat(testDatabase.setNX("2", "Då")).isEqualTo(":1\r\n");
-	}
 
     @Test
     void testSettingOneKeyInDatabaseMakesExistsFunctionReturnOneInstanceOfKeyExistingInTheDatabase() {
-        testDatabase.setNX("name", "saher");
+        testDatabase.setNX(List.of("", "name", "saher"));
 
         assertThat(testDatabase.exists(List.of("name"))).isEqualTo(":1\r\n");
     }
 
     @Test
     void testSettingTwoKeysInDatabaseMakesExistsFunctionReturnOneInstanceOfKeyExistingInTheDatabase() {
-        testDatabase.setNX("name", "saher");
-        testDatabase.setNX("1", "Hej");
+        testDatabase.setNX(List.of("", "name", "saher"));
+        testDatabase.setNX(List.of("", "1", "Hej"));
 
         assertThat(testDatabase.exists(List.of("name"))).isEqualTo(":1\r\n");
     }
 
     @Test
     void testAskingExistsFunctionForNumerousKeysWhereOneKeyHasTwoOccurrencesAndTheOtherKeyHasOneOccurrenceShouldReturnThree() {
-        testDatabase.setNX("name", "saher");
-        testDatabase.setNX("1", "Hej");
+        testDatabase.setNX(List.of("", "name", "saher"));
+        testDatabase.setNX(List.of("", "1", "Hej"));
 
         assertThat(testDatabase.exists(List.of("name", "1", "name", "2"))).isEqualTo(":3\r\n");
     }
 
     @Test
     void testSendingInNoParametersToExistsMethodReturnsZero() {
-        testDatabase.setNX("name", "saher");
-        testDatabase.setNX("1", "Hej");
+        testDatabase.setNX(List.of("", "name", "saher"));
+        testDatabase.setNX(List.of("", "1", "Hej"));
 
         assertThat(testDatabase.exists(Collections.EMPTY_LIST)).isEqualTo(":0\r\n");
+    }
+
+    @Test
+    void testSetNxReturnOneWhenKeyDontExist() {
+        assertThat(testDatabase.setNX(List.of("", "2", "Då"))).isEqualTo(":1\r\n");
     }
 
     @Test
